<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/lanse">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="员工角色选择"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/return_click"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/fanhui" />

        <TextView
            android:id="@+id/role_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/customer_save"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/test_spacing4"
        android:gravity="center"
        android:text="每个员工可以设置一种或多种角色"
        android:textColor="@color/touzi_huise"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/shop_keeper_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/shop_keeper_checkbox"
            style="@style/CustomCheckboxTheme3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="10dp"
            android:clickable="false" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/shop_keeper"
                android:textColor="@color/heise"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:text="@string/shop_keeper_describe"
                android:textColor="@color/touzi_huise"
                android:textSize="14sp" />


        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/fengexian_color" />

    <LinearLayout
        android:id="@+id/salesperson_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/salesperson_checkbox"
            style="@style/CustomCheckboxTheme3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="10dp"
            android:clickable="false" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/salesperson"
                android:textColor="@color/heise"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:text="@string/salesperson_describe"
                android:textColor="@color/touzi_huise"
                android:textSize="14sp" />


        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/fengexian_color" />

    <LinearLayout
        android:id="@+id/godown_man_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/godown_man_checkbox"
            style="@style/CustomCheckboxTheme3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="10dp"
            android:clickable="false" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/godown_man"
                android:textColor="@color/heise"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:text="@string/godown_man_describe"
                android:textColor="@color/touzi_huise"
                android:textSize="14sp" />


        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/fengexian_color" />
</LinearLayout>